package com.y4vra.irboardbackend.entities.enums;

public enum RequirementState {
    PENDING_APPROVAL,
    APPROVED,
    FINISHED,
    DEACTIVATED,
    REMOVED,
}
