export interface User {
  id: number;
  email: string;
  name: string;
  surname: string;
  active: boolean;
  isAdmin: boolean;
}